--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="pojeto pratico">
     <meta name="keywords" content="projete,pratico,iniciante,html,css,js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    <link rel="stylesheet" href="css/all.min.css">
+    <!-- <link rel="stylesheet" href="css/all.min.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="favicon/music-solid.svg">
 </head>
@@ -48,7 +48,7 @@
 
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/js/fontawesome.min.js"></script>
-    <script src="js/fontawesome.min.js"></script>
+    <!-- <script src="js/fontawesome.min.js"></script> -->
     <script src="js/main.js"></script>
 </body>
 </html>
