--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     
     <main>
         <section class="player-container">
+
+            <article class="sidebar-music">
+
+                <i class="fas fa-times"></i>
+
+            </article><!--## SIDEBAR MUSIC ##-->
+
             <nav class="nav-player">
                 <div class="menu-controls">
                     <i class="fas fa-volume-mute"></i>
