--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="projete,pratico,iniciante,html,css,js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <!-- <link rel="stylesheet" href="css/all.min.css"> -->
+    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="favicon/music-solid.svg">
 </head>
@@ -21,6 +22,10 @@
             <article class="sidebar-music">
 
                 <i class="fas fa-times"></i>
+
+                <div class="music-box-container">
+
+                </div><!--## MUSIC BOX CONTAINER ##-->
 
             </article><!--## SIDEBAR MUSIC ##-->
 
@@ -45,8 +50,7 @@
 
             <div class="player-controls">
                 <div class="song-duration">
-                    <input type="range" value="0" min="0" max="100" class="duration-range">
-                    <span class="song-time">3:00</span>
+                    <input type="range" value="0" min="0" class="duration-range">
                 </div><!--## SONG DURATION ##-->
 
                 <div class="song-navigation">
